@@ -23,7 +23,10 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -42,9 +45,10 @@ import java.util.zip.ZipEntry;
 import java.util.zip.ZipException;
 import java.util.zip.ZipFile;
 import org.apache.commons.configuration.SubnodeConfiguration;
-import org.apache.commons.lang.ArrayUtils;
-import org.apache.commons.lang.StringUtils;
-import org.apache.commons.lang.SystemUtils;
+import org.apache.commons.io.IOUtils;
+import org.apache.commons.lang3.ArrayUtils;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.SystemUtils;
 import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -72,6 +76,16 @@ public class AddOn {
      * @since 2.6.0
      */
     public static final String MANIFEST_FILE_NAME = "ZapAddOn.xml";
+
+    /**
+     * The name of the SBOM file, contained in the add-ons.
+     *
+     * <p>The SBOM file is expected to be in the root of the ZIP file, but may not be present for
+     * 3rd party add-ons.
+     *
+     * @since 2.14.0
+     */
+    protected static final String BOM_FILE_NAME = "bom.json";
 
     public enum Status {
         unknown,
@@ -231,12 +245,14 @@ public class AddOn {
     private String name;
     private String description = "";
     private String author = "";
+
     /**
      * The version declared in the manifest file.
      *
      * <p>Never {@code null}.
      */
     private Version version;
+
     /**
      * The (semantic) version declared in the manifest file, to be replaced by {@link #version}.
      *
@@ -290,8 +306,6 @@ public class AddOn {
     private List<AbstractPlugin> loadedAscanrules = Collections.emptyList();
     private boolean loadedAscanRulesSet;
     private List<String> pscanrules = Collections.emptyList();
-    private List<PluginPassiveScanner> loadedPscanrules = Collections.emptyList();
-    private boolean loadedPscanRulesSet;
     private List<String> files = Collections.emptyList();
     private List<Lib> libs = Collections.emptyList();
 
@@ -328,40 +342,7 @@ public class AddOn {
      */
     private boolean mandatory;
 
-    private static final Logger logger = LogManager.getLogger(AddOn.class);
-
-    /**
-     * Tells whether or not the given file name matches the name of a ZAP add-on.
-     *
-     * <p>The file name must have the format "{@code <id>-<status>-<version>.zap}". The {@code id}
-     * is a string, the {@code status} must be a value from {@link Status} and the {@code version}
-     * must be an integer.
-     *
-     * @param fileName the name of the file to check
-     * @return {@code true} if the given file name is the name of an add-on, {@code false}
-     *     otherwise.
-     * @deprecated (2.6.0) Use {@link #isAddOnFileName(String)} instead, the checks done in this
-     *     method are more strict than it needs to.
-     * @see #isAddOnFileName(String)
-     */
-    @Deprecated
-    public static boolean isAddOn(String fileName) {
-        if (!isAddOnFileName(fileName)) {
-            return false;
-        }
-        if (fileName.substring(0, fileName.indexOf(".")).split("-").length < 3) {
-            return false;
-        }
-        String[] strArray = fileName.substring(0, fileName.indexOf(".")).split("-");
-        try {
-            Status.valueOf(strArray[1]);
-            Integer.parseInt(strArray[2]);
-        } catch (Exception e) {
-            return false;
-        }
-
-        return true;
-    }
+    private static final Logger LOGGER = LogManager.getLogger(AddOn.class);
 
     /**
      * Tells whether or not the given file name matches the name of a ZAP add-on.
@@ -378,18 +359,6 @@ public class AddOn {
             return false;
         }
         return fileName.toLowerCase(Locale.ROOT).endsWith(FILE_EXTENSION);
-    }
-
-    /**
-     * Tells whether or not the given file is an add-on.
-     *
-     * @param f the file to be checked
-     * @return {@code true} if the given file is an add-on, {@code false} otherwise.
-     * @deprecated (2.6.0) Use {@link #isAddOn(Path)} instead.
-     */
-    @Deprecated
-    public static boolean isAddOn(File f) {
-        return isAddOn(f.toPath());
     }
 
     /**
@@ -460,12 +429,11 @@ public class AddOn {
                         e -> {
                             ZipEntry libEntry = zip.getEntry(e);
                             if (libEntry == null) {
-                                logger.warn("The add-on " + file + " does not have the lib: " + e);
+                                LOGGER.warn("The add-on {} does not have the lib: {}", file, e);
                                 return true;
                             }
                             if (libEntry.isDirectory()) {
-                                logger.warn(
-                                        "The add-on " + file + " does not have a file lib: " + e);
+                                LOGGER.warn("The add-on {} does not have a file lib: {}", file, e);
                                 return true;
                             }
                             return false;
@@ -488,53 +456,15 @@ public class AddOn {
             return Optional.of(new AddOn(file));
         } catch (AddOn.InvalidAddOnException e) {
             String logMessage = "Invalid add-on: " + file.toString() + ".";
-            if (logger.isDebugEnabled() || Constant.isDevMode()) {
-                logger.warn(logMessage, e);
+            if (LOGGER.isDebugEnabled() || Constant.isDevMode()) {
+                LOGGER.warn(logMessage, e);
             } else {
-                logger.warn(logMessage + " " + e.getMessage());
+                LOGGER.warn("{} {}", logMessage, e.getMessage());
             }
         } catch (Exception e) {
-            logger.error("Failed to create an add-on from: " + file.toString(), e);
+            LOGGER.error("Failed to create an add-on from: {}", file, e);
         }
         return Optional.empty();
-    }
-
-    /**
-     * Constructs an {@code AddOn} with the given file name.
-     *
-     * @param fileName the file name of the add-on
-     * @throws Exception if the file name is not valid.
-     * @deprecated (2.6.0) Use {@link #AddOn(Path)} instead.
-     */
-    @Deprecated
-    public AddOn(String fileName) throws Exception {
-        // Format is <name>-<status>-<version>.zap
-        if (!isAddOn(fileName)) {
-            throw new Exception("Invalid ZAP add-on file " + fileName);
-        }
-        String[] strArray = fileName.substring(0, fileName.indexOf(".")).split("-");
-        this.id = strArray[0];
-        this.name = this.id; // Will be overridden if theres a ZapAddOn.xml file
-        this.status = Status.valueOf(strArray[1]);
-        this.version = new Version(Integer.parseInt(strArray[2]) + ".0.0");
-    }
-
-    /**
-     * Constructs an {@code AddOn} from the given {@code file}.
-     *
-     * <p>The {@value #MANIFEST_FILE_NAME} ZIP file entry is read after validating that the add-on
-     * has a valid add-on file name.
-     *
-     * <p>The installation status of the add-on is 'not installed'.
-     *
-     * @param file the file of the add-on
-     * @throws Exception if the given {@code file} does not exist, does not have a valid add-on file
-     *     name or an error occurred while reading the {@code value #ZAP_ADD_ON_XML} ZIP file entry
-     * @deprecated (2.6.0) Use {@link #AddOn(Path)} instead.
-     */
-    @Deprecated
-    public AddOn(File file) throws Exception {
-        this(file.toPath());
     }
 
     /**
@@ -559,6 +489,7 @@ public class AddOn {
         }
         this.id = extractAddOnId(file.getFileName().toString());
         this.file = file.toFile();
+        this.size = Files.size(file);
         readZapAddOnXmlFile(result.getManifest());
     }
 
@@ -626,9 +557,6 @@ public class AddOn {
      * Constructs an {@code AddOn} from an add-on entry of {@code ZapVersions.xml} file. The
      * installation status of the add-on is 'not installed'.
      *
-     * <p>The given {@code SubnodeConfiguration} must have a {@code XPathExpressionEngine}
-     * installed.
-     *
      * <p>The {@value #MANIFEST_FILE_NAME} ZIP file entry is read, if the add-on file exists
      * locally.
      *
@@ -637,7 +565,6 @@ public class AddOn {
      * @param xmlData the source of add-on entry of {@code ZapVersions.xml} file
      * @throws MalformedURLException if the {@code URL} of the add-on is malformed
      * @throws IOException if an error occurs while reading the XML data
-     * @see org.apache.commons.configuration.tree.xpath.XPathExpressionEngine
      */
     public AddOn(String id, File baseDir, SubnodeConfiguration xmlData)
             throws MalformedURLException, IOException {
@@ -652,7 +579,11 @@ public class AddOn {
         this.semVer = addOnData.getSemVer();
         this.status = AddOn.Status.valueOf(addOnData.getStatus());
         this.changes = addOnData.getChanges();
-        this.url = new URL(addOnData.getUrl());
+        try {
+            this.url = new URI(addOnData.getUrl()).toURL();
+        } catch (URISyntaxException e) {
+            throw new MalformedURLException(e.getMessage());
+        }
         this.file = new File(baseDir, addOnData.getFile());
         this.size = addOnData.getSize();
         this.notBeforeVersion = addOnData.getNotBeforeVersion();
@@ -668,9 +599,9 @@ public class AddOn {
     private URL createUrl(String url) {
         if (url != null && !url.isEmpty()) {
             try {
-                return new URL(url);
+                return new URI(url).toURL();
             } catch (Exception e) {
-                logger.warn("Invalid URL for add-on \"" + id + "\": " + url, e);
+                LOGGER.warn("Invalid URL for add-on \"{}\": {}", id, url, e);
             }
         }
         return null;
@@ -863,15 +794,8 @@ public class AddOn {
                 try {
                     this.loadManifestFile();
                 } catch (IOException e) {
-                    if (logger.isDebugEnabled()) {
-                        logger.debug(
-                                "Failed to read the "
-                                        + AddOn.MANIFEST_FILE_NAME
-                                        + " file of "
-                                        + id
-                                        + ":",
-                                e);
-                    }
+                    LOGGER.debug(
+                            "Failed to read the {} file of {}:", AddOn.MANIFEST_FILE_NAME, id, e);
                 }
             }
         }
@@ -1118,76 +1042,12 @@ public class AddOn {
      * @return an unmodifiable {@code List} with the passive scan rules of this add-on that were
      *     loaded, never {@code null}
      * @since 2.4.3
-     * @see #setLoadedPscanrules(List)
+     * @deprecated (2.15.0) Returns an empty list always. The scan rules are loaded by the
+     *     corresponding extension.
      */
+    @Deprecated(since = "2.15.0", forRemoval = true)
     public List<PluginPassiveScanner> getLoadedPscanrules() {
-        return loadedPscanrules;
-    }
-
-    /**
-     * Sets the loaded passive scan rules of the add-on, allowing to set the status of the passive
-     * scan rules appropriately and keep track of the passive scan rules loaded so that they can be
-     * removed during uninstallation.
-     *
-     * <p><strong>Note:</strong> Helper method to be used (only) by/during (un)installation process
-     * and loading of the add-on. Should be called when installing/loading the add-on, by setting
-     * the loaded passive scan rules, and when uninstalling by setting an empty list. The method
-     * {@code setLoadedPscanrulesSet(boolean)} should also be called.
-     *
-     * @param pscanrules the passive scan rules loaded, might be empty if none were actually loaded
-     * @throws IllegalArgumentException if {@code pscanrules} is {@code null}.
-     * @since 2.4.3
-     * @see #setLoadedPscanrulesSet(boolean)
-     * @see PluginPassiveScanner#setStatus(Status)
-     */
-    void setLoadedPscanrules(List<PluginPassiveScanner> pscanrules) {
-        if (pscanrules == null) {
-            throw new IllegalArgumentException("Parameter pscanrules must not be null.");
-        }
-
-        if (pscanrules.isEmpty()) {
-            loadedPscanrules = Collections.emptyList();
-            return;
-        }
-
-        for (PluginPassiveScanner pscanrule : pscanrules) {
-            pscanrule.setStatus(getStatus());
-        }
-        loadedPscanrules = Collections.unmodifiableList(new ArrayList<>(pscanrules));
-    }
-
-    /**
-     * Tells whether or not the loaded passive scan rules of the add-on, if any, were already set to
-     * the add-on.
-     *
-     * <p><strong>Note:</strong> Helper method to be used (only) by/during (un)installation process
-     * and loading of the add-on.
-     *
-     * @return {@code true} if the loaded passive scan rules were already set, {@code false}
-     *     otherwise
-     * @since 2.4.3
-     * @see #setLoadedPscanrules(List)
-     * @see #setLoadedPscanrulesSet(boolean)
-     */
-    boolean isLoadedPscanrulesSet() {
-        return loadedPscanRulesSet;
-    }
-
-    /**
-     * Sets whether or not the loaded passive scan rules, if any, where already set to the add-on.
-     *
-     * <p><strong>Note:</strong> Helper method to be used (only) by/during (un)installation process
-     * and loading of the add-on. The method should be called, with {@code true} during
-     * installation/loading and {@code false} during uninstallation, after calling the method {@code
-     * setLoadedPscanrules(List)}.
-     *
-     * @param pscanrulesSet {@code true} if the loaded passive scan rules were already set, {@code
-     *     false} otherwise
-     * @since 2.4.3
-     * @see #setLoadedPscanrules(List)
-     */
-    void setLoadedPscanrulesSet(boolean pscanrulesSet) {
-        loadedPscanRulesSet = pscanrulesSet;
+        return List.of();
     }
 
     public List<String> getFiles() {
@@ -1233,16 +1093,6 @@ public class AddOn {
             return true;
         }
         return getFile().lastModified() > addOn.getFile().lastModified();
-    }
-
-    /**
-     * @deprecated (2.4.0) Use {@link #calculateRunRequirements(Collection)} instead. Returns {@code
-     *     false}.
-     * @return {@code false} always.
-     */
-    @Deprecated
-    public boolean canLoad() {
-        return false;
     }
 
     /**
@@ -1365,18 +1215,15 @@ public class AddOn {
         if (installedVersion != null && !addOn.equals(installedVersion)) {
             requirements.setIssue(
                     BaseRunRequirements.DependencyIssue.OLDER_VERSION, installedVersion);
-            if (logger.isDebugEnabled()) {
-                logger.debug(
-                        "Add-on "
-                                + addOn
-                                + " not runnable, old version still installed: "
-                                + installedVersion);
-            }
+            LOGGER.debug(
+                    "Add-on {} not runnable, old version still installed: {}",
+                    addOn,
+                    installedVersion);
             return;
         }
 
         if (!requirements.addDependency(parent, addOn)) {
-            logger.warn("Cyclic dependency detected with: " + requirements.getDependencies());
+            LOGGER.warn("Cyclic dependency detected with: {}", requirements.getDependencies());
             requirements.setIssue(
                     BaseRunRequirements.DependencyIssue.CYCLIC, requirements.getDependencies());
             return;
@@ -2377,7 +2224,7 @@ public class AddOn {
         }
 
         /**
-         * Tells whether or not the the bundle data is empty.
+         * Tells whether or not the bundle data is empty.
          *
          * <p>An empty {@code BundleData} does not contain any information to load a {@link
          * ResourceBundle}.
@@ -2432,7 +2279,7 @@ public class AddOn {
         }
 
         /**
-         * Tells whether or not the the HelpSet data is empty.
+         * Tells whether or not the HelpSet data is empty.
          *
          * <p>An empty {@code HelpSetData} does not contain any information to load the help.
          *
@@ -2467,6 +2314,7 @@ public class AddOn {
      * @since 2.8.0
      * @see #getValidationResult()
      */
+    @SuppressWarnings("serial")
     public static class InvalidAddOnException extends IOException {
 
         private static final long serialVersionUID = 1L;
@@ -2544,5 +2392,30 @@ public class AddOn {
             intVersion += javaVersions[2];
         }
         return intVersion;
+    }
+
+    /**
+     * Returns the SBOM. May be null, e.g. for 3rd party add-ons.
+     *
+     * @return the SBOM.
+     * @since 2.14.0
+     */
+    public String getSbom() {
+        if (file != null && file.exists()) {
+            // Might not exist in the tests
+            try (ZipFile zip = new ZipFile(file)) {
+                ZipEntry zapAddOnEntry = zip.getEntry(BOM_FILE_NAME);
+                if (zapAddOnEntry == null) {
+                    return null;
+                }
+
+                try (InputStream zis = zip.getInputStream(zapAddOnEntry)) {
+                    return IOUtils.toString(zis, StandardCharsets.UTF_8);
+                }
+            } catch (Exception e) {
+                // Ignore
+            }
+        }
+        return null;
     }
 }
