@@ -20,14 +20,15 @@
 package org.zaproxy.zap.control;
 
 import java.io.File;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
-import org.apache.commons.configuration.tree.xpath.XPathExpressionEngine;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.parosproxy.paros.Constant;
@@ -42,9 +43,10 @@ public class AddOnCollection {
         mac
     }
 
-    private static final Logger logger = LogManager.getLogger(AddOnCollection.class);
+    private static final Logger LOGGER = LogManager.getLogger(AddOnCollection.class);
     private ZapRelease zapRelease = null;
     private List<AddOn> addOns = new ArrayList<>();
+    private List<String> mandatoryAddOns = List.of();
     private File downloadDir = new File(Constant.FOLDER_LOCAL_PLUGIN);
     private Platform platform;
 
@@ -69,12 +71,11 @@ public class AddOnCollection {
                 AddOn.AddOnRunRequirements requirements =
                         addOn.calculateInstallRequirements(addOns);
                 if (requirements.hasDependencyIssue()) {
-                    if (logger.isDebugEnabled()) {
-                        logger.debug(
-                                "Ignoring add-on  "
-                                        + addOn.getName()
-                                        + " because of dependency issue: "
-                                        + AddOnRunIssuesUtils.getDependencyIssue(requirements));
+                    if (LOGGER.isDebugEnabled()) {
+                        LOGGER.debug(
+                                "Ignoring add-on {} because of dependency issue: {}",
+                                addOn.getName(),
+                                AddOnRunIssuesUtils.getDependencyIssue(requirements));
                     }
                     if (AddOn.AddOnRunRequirements.DependencyIssue.CYCLIC
                             == requirements.getDependencyIssue()) {
@@ -84,12 +85,11 @@ public class AddOnCollection {
                         checkedAddOns.removeAll(cyclicChain);
                     }
                 } else if (requirements.hasExtensionsWithRunningIssues()) {
-                    if (logger.isDebugEnabled()) {
-                        logger.debug(
-                                "Ignoring add-on  "
-                                        + addOn.getName()
-                                        + " because of dependency issue in an extension: "
-                                        + AddOnRunIssuesUtils.getDependencyIssue(requirements));
+                    if (LOGGER.isDebugEnabled()) {
+                        LOGGER.debug(
+                                "Ignoring add-on {} because of dependency issue in an extension: {}",
+                                addOn.getName(),
+                                AddOnRunIssuesUtils.getDependencyIssue(requirements));
                     }
                 } else {
                     runnableAddOns.add(addOn);
@@ -100,62 +100,61 @@ public class AddOnCollection {
     }
 
     private void load(ZapXmlConfiguration config) {
-        config.setExpressionEngine(new XPathExpressionEngine());
         try {
             // See if theres a ZAP release defined
-            String version = config.getString("core/version");
+            String version = config.getString("core.version");
             if (Platform.daily.equals(platform)) {
                 // Daily releases take precedence even if running on Kali as they will have been
                 // manually installed
-                version = config.getString("core/daily-version", version);
+                version = config.getString("core.daily-version", version);
             } else if (Constant.isKali()) {
-                version = config.getString("core/kali-version", version);
+                version = config.getString("core.kali-version", version);
             }
             if (version != null && version.length() > 0) {
-                String relUrlStr = config.getString("core/relnotes-url", null);
+                String relUrlStr = config.getString("core.relnotes-url", null);
                 URL relUrl = null;
                 if (relUrlStr != null) {
-                    relUrl = new URL(relUrlStr);
+                    relUrl = new URI(relUrlStr).toURL();
                 }
 
+                String platformPrefix = "core." + platform.name() + ".";
                 this.zapRelease =
                         new ZapRelease(
                                 version,
-                                new URL(config.getString("core/" + platform.name() + "/url")),
-                                config.getString("core/" + platform.name() + "/file"),
-                                config.getLong("core/" + platform.name() + "/size"),
-                                config.getString("core/relnotes"),
+                                new URI(config.getString(platformPrefix + "url")).toURL(),
+                                config.getString(platformPrefix + "file"),
+                                config.getLong(platformPrefix + "size"),
+                                config.getString("core.relnotes"),
                                 relUrl,
-                                config.getString("core/" + platform.name() + "/hash"));
+                                config.getString(platformPrefix + "hash"));
             }
         } catch (Exception e) {
-            logger.error(e.getMessage(), e);
+            LOGGER.error(e.getMessage(), e);
         }
 
         try {
             // And then load the addons
             String[] addOnIds = config.getStringArray("addon");
             for (String id : addOnIds) {
-                logger.debug("Found addon " + id);
+                LOGGER.debug("Found add-on {}", id);
 
                 AddOn ao;
                 try {
                     ao = new AddOn(id, downloadDir, config.configurationAt("addon_" + id));
                     ao.setInstallationStatus(AddOn.InstallationStatus.AVAILABLE);
                 } catch (Exception e) {
-                    logger.warn("Failed to create add-on for " + id, e);
+                    LOGGER.warn("Failed to create add-on for {}", id, e);
                     continue;
                 }
                 if (ao.canLoadInCurrentVersion()) {
-                    // Ignore ones that dont apply to this version
-                    this.addOns.add(ao);
+                    addAddOnImpl(ao);
                 } else {
-                    logger.debug("Ignoring addon " + ao.getName() + " cant load in this version");
+                    LOGGER.debug("Ignoring add-on {} can't load in this version", ao.getName());
                 }
             }
 
         } catch (Exception e) {
-            logger.error(e.getMessage(), e);
+            LOGGER.error(e.getMessage(), e);
         }
     }
 
@@ -165,7 +164,7 @@ public class AddOnCollection {
                 try {
                     this.addDirectory(dir);
                 } catch (Exception e) {
-                    logger.error(e.getMessage(), e);
+                    LOGGER.error(e.getMessage(), e);
                 }
             }
         }
@@ -173,17 +172,17 @@ public class AddOnCollection {
 
     private void addDirectory(File dir) throws Exception {
         if (dir == null) {
-            logger.error("Null directory supplied");
+            LOGGER.error("Null directory supplied");
             return;
         }
         if (!dir.exists()) {
-            logger.warn(
-                    "Skipping enumeration of add-ons, the directory does not exist: "
-                            + dir.getAbsolutePath());
+            LOGGER.warn(
+                    "Skipping enumeration of add-ons, the directory does not exist: {}",
+                    dir.getAbsolutePath());
             return;
         }
         if (!dir.isDirectory()) {
-            logger.warn("Not a directory: " + dir.getAbsolutePath());
+            LOGGER.warn("Not a directory: {}", dir.getAbsolutePath());
             return;
         }
 
@@ -201,50 +200,39 @@ public class AddOnCollection {
                                                 if (ao.canLoadInCurrentVersion()) {
                                                     // Replace in situ so we're not changing a list
                                                     // we're iterating through
-                                                    logger.debug(
-                                                            "Addon "
-                                                                    + addOn.getId()
-                                                                    + " version "
-                                                                    + addOn.getVersion()
-                                                                    + " superseded by "
-                                                                    + ao.getVersion());
+                                                    LOGGER.debug(
+                                                            "Add-on {} version {} superseded by {}",
+                                                            addOn.getId(),
+                                                            addOn.getVersion(),
+                                                            ao.getVersion());
                                                     addOns.remove(addOn);
                                                 } else {
-                                                    if (logger.isDebugEnabled()) {
-                                                        logger.debug(
-                                                                "Ignoring newer addon "
-                                                                        + ao.getId()
-                                                                        + " version "
-                                                                        + ao.getVersion()
-                                                                        + " because of ZAP version constraints; Not before="
-                                                                        + ao.getNotBeforeVersion()
-                                                                        + " Not from="
-                                                                        + ao.getNotFromVersion()
-                                                                        + " Current Version="
-                                                                        + Constant.PROGRAM_VERSION);
-                                                    }
+                                                    LOGGER.debug(
+                                                            "Ignoring newer add-on {} version {} because of ZAP version constraints; Not before={} Not from={} Current Version={}",
+                                                            ao.getId(),
+                                                            ao.getVersion(),
+                                                            ao.getNotBeforeVersion(),
+                                                            ao.getNotFromVersion(),
+                                                            Constant.PROGRAM_VERSION);
                                                     add = false;
                                                 }
                                             } else {
                                                 // Same or older version, don't include
-                                                logger.debug(
-                                                        "Addon "
-                                                                + ao.getId()
-                                                                + " version "
-                                                                + ao.getVersion()
-                                                                + " not latest.");
+                                                LOGGER.debug(
+                                                        "Add-on {} version {} not latest.",
+                                                        ao.getId(),
+                                                        ao.getVersion());
                                                 add = false;
                                             }
                                             break;
                                         }
                                     }
                                     if (add) {
-                                        logger.debug(
-                                                "Found addon "
-                                                        + ao.getId()
-                                                        + " version "
-                                                        + ao.getVersion());
-                                        this.addOns.add(ao);
+                                        LOGGER.debug(
+                                                "Found add-on {} version {}",
+                                                ao.getId(),
+                                                ao.getVersion());
+                                        addAddOnImpl(ao);
                                     }
                                 });
             }
@@ -307,7 +295,7 @@ public class AddOnCollection {
                         updatedAddOns.add(ao);
                     }
                 } catch (Exception e) {
-                    logger.error(e.getMessage(), e);
+                    LOGGER.error(e.getMessage(), e);
                 }
             }
         }
@@ -334,7 +322,7 @@ public class AddOnCollection {
                         break;
                     }
                 } catch (Exception e) {
-                    logger.error(e.getMessage(), e);
+                    LOGGER.error(e.getMessage(), e);
                 }
             }
             if (isNew) {
@@ -362,8 +350,13 @@ public class AddOnCollection {
         if (this.includesAddOn(ao.getId())) {
             return false;
         }
-        this.addOns.add(ao);
+        addAddOnImpl(ao);
         return true;
+    }
+
+    private void addAddOnImpl(AddOn ao) {
+        ao.setMandatory(mandatoryAddOns.contains(ao.getId()));
+        addOns.add(ao);
     }
 
     public boolean removeAddOn(AddOn ao) {
@@ -374,5 +367,32 @@ public class AddOnCollection {
             }
         }
         return false;
+    }
+
+    /**
+     * Sets the IDs of the mandatory add-ons.
+     *
+     * <p><strong>Note:</strong> Not part of the public API.
+     *
+     * @param mandatoryAddOns the IDs of the mandatory add-ons.
+     * @throws NullPointerException if the given parameter is {@code null}.
+     * @throws IllegalStateException if any of the mandatory add-ons is missing.
+     */
+    public void setMandatoryAddOns(List<String> mandatoryAddOns) {
+        this.mandatoryAddOns = Objects.requireNonNull(mandatoryAddOns);
+
+        mandatoryAddOns.forEach(
+                id -> {
+                    AddOn addOn = getAddOn(id);
+                    if (addOn == null) {
+                        String message =
+                                "The mandatory add-on was not found: "
+                                        + id
+                                        + "\nRefer to https://www.zaproxy.org/docs/developer/ if you are building ZAP from source.";
+                        LOGGER.error(message);
+                        throw new IllegalStateException(message);
+                    }
+                    addOn.setMandatory(true);
+                });
     }
 }
